Updated Documentation for Self Refinement recipe

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -83,6 +83,7 @@ nav:
       - Structured Output: concepts/structured_output/README.md
   - Features:
       - Metadata Tracking: features/metadata_tracking.md
+      - Self Refinement: features/self_refinement.md
   - Tutorials:
       - Agent Simulation: tutorials/agent_simulation_tutorial.md
       - Agent Simulation with Tools: tutorials/agent_tool_simulation_tutorial.md
