multi modal format and multi dataset in UI

--- a/tasks/examples/multiple_dataset/graph_config.yaml
+++ b/tasks/examples/multiple_dataset/graph_config.yaml
@@ -60,7 +60,7 @@ graph_config:
     analyzer:
       node_type: llm
       model:
-        name: gpt-5
+        name: openai_gpt41
         temperature: 0.1
         max_tokens: 1024
         structured_output:
