[Enhancement] Add Support for Semantic Deduplication (#104)
* Added Semantic Dedup Graph Post Processor

* Added ANN dedup, test cases and documentation

* Added Documentation page to mkdocs

---------

Co-authored-by: Vipul Mittal <118464422+vipul-mittal@users.noreply.github.com>
Co-authored-by: Surajit Dasgupta <surajit.dasgupta@servicenow.com>

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -83,6 +83,7 @@ nav:
       - Structured Output: concepts/structured_output/README.md
   - Features:
       - Metadata Tracking: features/metadata_tracking.md
+      - Semantic Deduplication: features/semantic_deduplication.md
       - Self Refinement: features/self_refinement.md
   - Tutorials:
       - Agent Simulation: tutorials/agent_simulation_tutorial.md
